<resources>
    <string name="app_name">Sky Alert</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_weather">Current Weather</string>
    <string name="dummytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque eleifend donec pretium vulputate sapien. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Convallis convallis tellus id interdum velit. Dignissim suspendisse in est ante in nibh.</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="settings">Settings</string>
    <string name="units">Units</string>
    <string name="min">L</string>
    <string name="max">H</string>
    <string name="Settings">Settings</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="celsius_measure">°C</string>
    <string name="fahrenheit_measure">°F</string>
    <string name="kelvin_measure">°K</string>
    <string name="celsius_m_s">Celsius - meters/second</string>
    <string name="fahrenheit_mph">Fahrenheit - miles/hour</string>
    <string name="kelvin_m_s">Kelvin - meters/second</string>
    <string name="m_s">m/s</string>
    <string name="hpa">hPa</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="standard">Standard</string>
    <string name="search">Search</string>
    <string name="gps_is_disabled_do_you_want_to_enable_it">GPS is disabled. Do you want to enable it?</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="open_location_services">Open location services</string>
    <string name="sunrise">Sunrise</string>
    <string name="now">Now</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="five_days_forecast">5-DAYS FORECAST</string>
    <string name="today">Today</string>
    <string name="map">Map</string>
    <string name="title_activity_maps_fragment">MapsFragment</string>
    <string name="measures">Measures</string>
    <string name="select_the_units_of_measure">Select the units of measure</string>
    <string name="select_the_location_source">Select the location source</string>
    <string name="location_source">Location Source</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="real_feel">Real Feel</string>
    <string name="set_as_default_location">Set as default location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="alert">Alert</string>
    <string name="notification">Notification</string>
    <string name="notify_me">Notify me</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="retry">Retry</string>
    <string name="deleted">Deleted</string>
    <string name="error">Error</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="are_you_sure_you_want_to_delete_this_bookmark">Are you sure you want to delete this bookmark?</string>


</resources>