<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/measures">
        <ListPreference
            android:defaultValue="@string/metric"
            app:defaultValue="@string/metric"
            app:entries="@array/units"
            app:entryValues="@array/unit_values"
            app:key="unit"
            app:summary="@string/select_the_units_of_measure"
            app:title="Unit" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location">
        <ListPreference
            android:defaultValue="gps"
            app:defaultValue="gps"
            app:entries="@array/location_sources"
            app:entryValues="@array/location_sources_values"
            app:key="location_source"
            app:summary="@string/select_the_location_source"
            app:title="@string/location_source" />
    </PreferenceCategory>


</PreferenceScreen>